# Copyright (C) 2011, 2012
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libbase.la
libbase_la_SOURCES = \
	blob.h \
	compiler.h \
	dbg.h dbg.cpp \
	exc.h exc.cpp \
	fio.h fio.cpp \
	gettext.h \
	intcheck.h \
	msg.h msg.cpp \
	s11n.h s11n.cpp \
	str.h str.cpp
